--- a/src/payloadConfig.json
+++ b/src/payloadConfig.json
@@ -1,13 +1,16 @@
 {
     "payloadFile_1": "hekate.bin",
     "payloadName_1": "Hekate IPL",
-    "payloadDir_1": "./payloads",
+    "payloadDir_1": "../../app.asar.unpacked/src/payloads",
+    "plStartFromDrive_1": false,
 
     "payloadFile_2": "fusee.bin",
     "payloadName_2": "Atmosphere",
-    "payloadDir_2": "./payloads",
+    "payloadDir_2": "../../app.asar.unpacked/src/payloads",
+    "plStartFromDrive_2": false,
     
-    "payloadFile_3": "argon-nx.bin",
-    "payloadName_3": "ArgonNX",
-    "payloadDir_3": "./payloads"
+    "payloadFile_3": "Lockpick_RCM.bin",
+    "payloadName_3": "Lockpick_RCM",
+    "payloadDir_3": "C:\\Users\\Example\\Downloads",
+    "plStartFromDrive_3": true
 }
