--- a/src/payloadConfig.json
+++ b/src/payloadConfig.json
@@ -1,17 +1,17 @@
 {
     "payloadFile_1": "hekate.bin",
     "payloadName_1": "Hekate IPL",
-    "payloadDir_1": "src/payloads",
+    "payloadDir_1": "payloads",
     "plStartFromDrive_1": false,
 
     "payloadFile_2": "fusee.bin",
     "payloadName_2": "Atmosphere",
-    "payloadDir_2": "src/payloads",
+    "payloadDir_2": "payloads",
     "plStartFromDrive_2": false,
     
     "payloadFile_3": "argon-nx.bin",
     "payloadName_3": "ArgonNX",
-    "payloadDir_3": "src/payloads",
+    "payloadDir_3": "payloads",
     "plStartFromDrive_3": false,
 
     "payloadFile_4": "Lockpick_RCM.bin",
