--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,7 +75,7 @@ jobs:
 
     release:
         runs-on: ubuntu-latest
-        needs: [build-linux, build-mac, build-windows, build-windowsOnARM]
+        needs: [build-linux, build-windows]
 
         steps:
             - uses: actions/download-artifact@v2
