--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,19 +13,16 @@ jobs:
             - name: Checkout code
               uses: actions/checkout@v2
 
-            - uses: pnpm/action-setup@v2 # Install pnpm using packageManager key in package.json
-
             - name: Use Node.js 18
               uses: actions/setup-node@v2
               with:
                   node-version: 18
-                  cache: "pnpm"
 
             - name: Install Node dependencies
-              run: pnpm install
+              run: npm install
 
             - name: Install Electron-Builder
-              run: pnpm install -g electron-builder
+              run: npm install -g electron-builder
 
             - name: Build
               run: electron-builder --linux
@@ -47,19 +44,16 @@ jobs:
             - name: Checkout code
               uses: actions/checkout@v2
 
-            - uses: pnpm/action-setup@v2 # Install pnpm using packageManager key in package.json
-
             - name: Use Node.js 18
               uses: actions/setup-node@v2
               with:
                   node-version: 18
-                  cache: "pnpm"
 
             - name: Install Node dependencies
-              run: pnpm install
+              run: npm install
 
             - name: Install Electron-Builder
-              run: pnpm install -g electron-builder
+              run: npm install -g electron-builder
 
             - name: Build
               run: electron-builder --windows
