--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
               run: npm install -g electron-builder
 
             - name: Build
-              run: electron-builder --linux
+              run: electron-builder --linux tar.gz
               env:
                 GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             - name: List all files in the dist directory
@@ -56,7 +56,7 @@ jobs:
               run: npm install -g electron-builder
 
             - name: Build
-              run: electron-builder --windows
+              run: electron-builder --windows portable:ia32 && electron-builder --windows portable:x64
               env:
                 GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             - name: Delete unpacked builds
