--- a/package.json
+++ b/package.json
@@ -55,5 +55,27 @@
   },
   "dependencies": {
     "usb": "^2.5.1"
+  },
+  "win": {
+    "target": [
+      {
+        "target": "portable",
+        "arch": [
+          "x64",
+          "ia32"
+        ]
+      }
+    ]
+  },
+  "linux": {
+    "target": [
+      {
+        "target": "tar.gz",
+        "arch": [
+          "x64",
+          "ia32"
+        ]
+      }
+    ]
   }
 }
