--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,7 +56,7 @@ jobs:
               run: npm install -g electron-builder
 
             - name: Build
-              run: electron-builder --windows portable:ia32 && electron-builder --windows portable:x64
+              run: electron-builder --windows zip:ia32 zip:x64
               env:
                 GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             - name: Delete unpacked builds
