--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -103,7 +103,7 @@ jobs:
 
     release:
         runs-on: ubuntu-latest
-        needs: [build-linux, build-windows]
+        needs: [build-linux, build-windows, build-mac]
 
         steps:
             - uses: actions/download-artifact@v2
