Made it so you can't spam through tabs
PoLiSh

--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "buildStage": "alpha",
   "main": "./src/main.js",
   "scripts": {
-    "start": "electron .",
-    "prestart": "echo [ OrbitNX ]| chalk --stdin cyan inverse && echo - Starting...",
-    "test": "electron-builder --dir",
-    "pretest": "echo [ OrbitNX ]| chalk --stdin cyan inverse && echo - Building...",
-    "posttest": "echo [ OrbitNX ]| chalk --stdin cyan inverse && echo - Test Build Complete!",
+    "test": "electron .",
+    "pretest": "echo [ OrbitNX ]| chalk --stdin cyan inverse && echo - Starting...",
+    "start": "electron-builder --dir",
+    "prestart": "echo [ OrbitNX ]| chalk --stdin cyan inverse && echo - Building...",
+    "poststart": "echo [ OrbitNX ]| chalk --stdin cyan inverse && echo - Build Complete!",
     "postinstall": "echo [ OrbitNX ]| chalk --stdin cyan inverse && echo - Dependencies Installed!"
   },
   "repository": {
